--- a/_pages/podcast-episodes/ep-006.md
+++ b/_pages/podcast-episodes/ep-006.md
@@ -3,12 +3,44 @@ layout: podcast
 title: Dublin Indie Hackers no. 3 - with Courtland Allen and John Collison @ Stripe
 permalink: /podcast/episode/006
 subtitle: Takeaways from a Fireside Chat with Indie Hackers founder Courtland Allen and Stripe co-founder John Collison
-label: The biggest takeaways I hade from Indie Hackers meetup with Courtland Allen and Stripe co-founder John Collison. 
+label: The biggest takeaways I hade from Indie Hackers meetup with Courtland Allen and Stripe co-founder John Collison.
 date: Fri, 09 Nov 2018 05:14:00 GMT
 duration: "21:24"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/006-Dave-Albert-Show.mp3
 show: false
 ---
 
-<i> Coming Soon </i>
+Dave: Hello and welcome to the podcast. I'm your host, Dave Albert. In this show, I talked about technology, building a company as a CTO, and co-founder and have guests to discuss their roles in technology and entrepreneurship.
 
+
+Dave: Hello friends. So last night I went to a meetup of Dublin indie hackers with Cortland Allen. Allen, the founder of indie hackers, and John Collison, one of the co founders of stripe. Indie hackers, is a place where founders of profitable businesses and side projects can share their stories transparently where entrepreneurs can come to read and learn from those examples. It's also a community of individuals, Indie hackers come together to share their experiences, give and receive feedback and rely on each other for support. Indie hackers was created in August of 2016 and April of 2017, it was acquired by stripe. So I'm sure anyone listening to this knows what stripe is, but in case you don't, it's a payment processor which provides API's which enable developers to create websites that can accept payment easily. So the brothers that founded strike we're finding it very frustrating that there was no good tool to accept payments. And so basically that became their startup as opposed to whatever it was that they were working on before the guy that was interviewed last night, John Collison. He and his brother are basically the youngest self made billionaires in the world so it was a really interesting talk and I wanted to lay down some of the the interesting bits that I took away from the interview. So, asked what the early decisions that mattered to John, he the the bits I took away from it were the deciding to start in the face of naysayers, regulations and what feels like being late to market that the most important thing was being willing to take on a space, even if it feels feels like it's already full. So as Slack started, even though there were a number of chat type tools and HipChat, that slack didn't think that it was done right. But they went ahead and and and built their product anyway because it wasn't really feeling the need of the people. So everything else sucked.They knew they could do it better and so they did.
+
+The next or the other early decision that mattered to stripe was that they focused on the developers so both as product market fit as well as scratching their own itch, so they had a problem, they solve their problem and also making the barrier to entry very low that developers were able to pick it, stripe it is and implement it on their own without having to go through a long procurement process that many of the products out there, they would just be giving their pitch to the business while the developers that already implemented stripe, so making it easy for developers to use their tool and the changing atmosphere where developers are empowered and also the low cost of entry.
+
+So moving on other thoughts that that were expressed where, don't spend too much time on something before you have proof that people want it. They had paying customers after three months of working on a very rough alpha. So what this means is, you know, the faster you can go to market with something the better because that's validated your idea and your product. Obviously, everybody has the idea that their product needs to be very highly polished before they show it to people. And in some industries, I'm sure that is still true. I think that is true in in the industry that I'm currently and but if at all possible get something that people are actually using as soon as possible otherwise you'll end up spending months, years on something that when you finally feel like it's good enough to show to people then you find out that you've actually solve the wrong problem or you've got the wrong solution to the problem.
+
+Next, one of the things that was brought up was stripe make their money on the success of their customers and so making their customers be more successful is beneficial to strike. So we're because stripe makes money on every transaction that is used on the stripe platform, the more money that their customers make, the more money they make. So one of the ways that they're helping their customers be more successful is they've written a book on the knowledge they've acquired over the years and are distributing that so that their customers can be more successful. A key thing that John found through the history of stripe is that, you need to get religious in fanatic customer focus that's paramount. A lot of companies, industries, organizations may have that fanatical customer focus in the beginning, but then they start to lose that over time or that's not fair. Some of the people that come into the organization over time don't necessarily know that they need to have that fanatical customer focus and that can get lost in in people just doing their jobs they today where if you in in grain that fanatical customer focus in each and every person in the organization you're going to be much better off. So an interesting fault was that
+just like with joining a space where you you may already seem like it's the space is full or that there are already people doing it and you'd have to be a little bit crazy thinking that you've got it right and nobody else does. So you've got to think the world is wrong and you're right just like stripe just like slack. But that doesn't mean that you need to reinvent all the wheels. So yes, you may be working on a problem knowing that you can do it better. And that's your core business. But that doesn't mean that you need to reinvent every tool that's out there every processes out there. So make sure to learn from others use of use tools that are available and focus on your core business.
+
+When asked what playbook he wished existed out there in the world? He went through his answer. And what I got out of it was that if you make your users and your customers better with all the assets you have, that you're going to be better off so your knowledge as well as your product. So share what what will make your users and your customers better.
+As well as giving them the product that will be a self feeding cycle that will grow your business, basically.
+
+When asked about the the the fault that ideas are worthless, not John, but the the founder of indie hackers, Cortland Alan, what he said was that he didn't believe it was true and went through a bit of a, an explanation of that, basically kind of pulling to the middle of it. Some people who think it's all about the idea and the money will just come to them aren't aren't right, and the people who think it's only hard work think that they're right that the pulling into the middle of what I think are they you know ideas are worthless without massive execution. So I think that's it is that ideas are worthless but a lot of times it's left off that without massive execution so a bad idea with massive execution isn't necessarily going to get you somewhere but if it's the right idea the right fit with your execution, then then you've got something.
+
+Cortland asked John, what, what he's done, and what he's learned over the years to help make decisions better, he brought up poor Charlie's Almanac by Charles Monger. The vice chairman of Berkshire Hathaway famous for Warren Buffett. And the biggest thing that he took away from that book was to make sure to view things from other people's incentives. So think about how other people are incentivized to act and act accordingly yourself. So people's incentives often lead you to understand their motives. So what incentives someone to act a certain way? Or, or what will the incentive for people be that drives them to act a certain way and then position yourself and your company so that you get the benefits.
+
+Good question is so we're here in in Dublin, Ireland and as John and his brother are from Ireland originally. And now they live in San Francisco. And the question was, what should startups around the world ignore from Silicon Valley? And he says, The biggest thing is the hype cycles. So to avoid mind viruses, the the hype, the trends, so there's this things always come in cycles. And he's quite perplexed by some of the companies in the VR and crypto space both technologies are good are at least could be good. But there's so many companies they just throw those words around and in aren't really based on a need and the trust of the world should basically avoid that. So if he were to leave stripe then what his his interests are that with building infrastructure or lower level elements that that gives you great leverage. And that's I saw that kind of like building the platform as opposed to building an application in the platform. So the lower down the stack, but and not just technical stack, but the lower down the stack of whatever it is that builds up something that the more leverage you're going to have become a force multiplier also finds that satellites are very interesting in the space for Internet access and and cellular access. So as opposed to cell towers, like we currently have terrestrial cell towers that having satellites to deliver that maybe one of the bigger technologies in the short term future or mid term future, I suppose what should a startup founder do at the meetups, that like the one that we were at last night, John's biggest thing that everyone needs to do is so as in sell the idea the product, users is an opportunity to sell to to hone your your skills and selling your idea and and ensuring that other people are buying into your idea if you can't get other people to buy into your idea who aren't necessarily invested in using it, then it's going to be even harder to sell it to people who are is what I got from what he was saying. And also to make sure to network well because you never know who you're going to meet who might be the might have a valuable partnership with in some way sharing ideas sharing thoughts, experiences, etc
+
+Then next question that was asked was what criteria do you use to validate products and he says that one of the things that that's very important is can you imagine people use it and obviously you still need to know the market because at least somewhat so if you're too far removed from the market, then you really have no perspective on that. But can you imagine people using it.
+
+Next thing would be the the fit and finish. I didn't really quite get exactly what he was saying, but I guess it was, you know, does it fit with people? Is it is it does it appear to be like it's on the right track? Is it is it nice enough that when I was a little bit perplexed by just I maybe it was a term that I'd not really heard. So I guess I could have done a little research on that, but I didn't. Sorry.
+
+One of the ones that I found quite interesting that he said was a pretty big indicator was how well can the founder articulate the business and overcoming objections? So if a founder can't sell it to other people just articulating what the business will do, how it will grow, how it will overcome the problems that they will face, then that's a pretty big indicator one way or the other, that if you can't do that, then chances are you're not going to succeed. But if you can do it often that's that's a very big indicator that things will go well for you in the long term.
+
+And then Cortland brought up that he thinks that one of the big ones is the trajectory and velocity that startups make over a short amount of time. So the faster you can move in the right direction, the better and I can definitely see that in the way some of what we've done at Medit could have been better so it would be great to have seen this talk for some of the information isn't necessarily that much different than what you'll find in other areas. But it was a very good and interesting talk and I really enjoyed it. One of the things that was most unique I thought of this interview was that John is is it really measured and effect reflective person and seems to really put in some bought before speaking and a lot of times you just see people who just spew out information, not necessarily that they're giving you wrong information, but he seems to really reflect on what he's going to say. And I found that refreshing. I don't know if it's just that I think that I do the same thing and maybe felt a little bit of a catch up with that.
+
+But I found it interesting, anyway. He's a very good speaker, very well spoken, very intelligent, and I would definitely recommend going to see him anywhere or, you know, you can always find videos on online. It's well worth your time if you're in the tech or startup space. So that's it for this episode. Thanks very much. As always, you can email me at podcast@dave-albert.com.
+
+Any questions, any comments or anything you'd like to hear from me? Thanks.
+
+Until next time, remember, any sufficiently advanced technology is indistinguishable from magic.
